# HackMIT25

./: .gitignore  README.md  VIDEO_INTEGRATION_SUMMARY.md
backend/: README.md  pyproject.toml  start.py  test_cloudinary_upload.py  test_detective_scenarios.py  test_simple_video_tool.py
backend/app/: auth.py  constants.py  helpers.py  main.py  models.py
backend/app/agent/: agent.py  agent_helpers.py  agent_tools.py  chat_agent.py
backend/app/agent/video/: example_text_script.json  text_bullet_video.py
backend/app/api_clients/: linear_client.py  mongo.py  slack_client.py
backend/app/database_builder/: daytona_chunk_runner.py  linear_ingestion.py  slack_ingestion.py
backend/app/services/: interactive_lesson_service.py  lesson_service.py
backend/app/utils/: build_daytona_image.py  query_runner.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/auth/login/: route.ts
frontend/app/api/auth/logout/: route.ts
frontend/app/chat/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/lesson/[id]/: page.tsx
frontend/app/login/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/signup/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/ui/: ConnectionDashboard.tsx  ConnectionStateCard.tsx
frontend/src/lib/: auth.ts  backend-auth.ts  config.ts  lessons.ts  mongodb-fallback.ts  mongodb.ts
veo3-testing/: veo3.py
(+6 files in other folders)
