[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "daytona>=0.27.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "aiohttp>=3.9.0",
    "llama-index>=0.12.0",
    "llama-index-vector-stores-pinecone>=0.7.1",
    "llama-index-llms-openai>=0.2.0",
    "llama-index-llms-anthropic>=0.2.0",
    "tree-sitter>=0.25.1",
    "tree-sitter-language-pack>=0.9.0",
    "pyjwt>=2.8.0",
    "pymongo>=4.13.2",
    "passlib>=1.7.4",
    "bcrypt<=4.0.0",
    "manim>=0.19.0",
    "gtts>=2.5.4",
    "moviepy>=2.2.1",
    "cloudinary>=1.41.0",
]
[tool.uv]
override-dependencies = [
    "pinecone-plugin-inference ; sys_platform == 'never'",
]

[dependency-groups]
dev = [
    "ruff>=0.13.0",
]
